--- a/recipes.html
+++ b/recipes.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="recipes.html" style="color: brown;">Recipes</a></li>
                 <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
