--- a/recipes.html
+++ b/recipes.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html" style="color: brown;">Recipes</a></li>
+                <li><a href="recipes.html" style="color: lightblue; text-decoration: underline;">Recipes</a></li>
                 <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
             <h2>Details:</h2>
             <ul>
                 <li><strong>Origin:</strong> Northern Europe</li>
-                <li><strong>Source:</strong> <a href="https://www.delish.com/cooking/recipe-ideas/a44763401/mac-and-cheese-recipe/" target="_blank">Delish Recipe</a></li>
+                <li><strong>Source:</strong> <a href="https://www.delish.com/cooking/recipe-ideas/a44763401/mac-and-cheese-recipe/" target="_blank" style="color: black;">Delish Recipe</a></li>
                 <li><strong>Category:</strong> Main Dish</li>
             </ul>
             <img src="images/mac_cheese.jpg" width="400" alt="Mac & Cheese">
