--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Pets</title>
+    <title>Index</title>
 </head>
 <body>
     <a href = "#main">Skip to Main Content</a>
