--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Index</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href="#main" class="skip-link">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
