--- a/recipes.html
+++ b/recipes.html
@@ -21,14 +21,14 @@
     </header>
     <main id="main">
         <section>
-            <h1>Chicken Curry Recipe</h1>
+            <h2>Chicken Curry Recipe</h2>
             <h2>Details:</h2>
             <ul>
                 <li><strong>Origin:</strong> Japan</li>
                 <li><strong>Source:</strong> Family Recipe</li>
                 <li><strong>Category:</strong> Main Dish</li>
             </ul>
-            <img src="images/Japanese Chicken Curry.jpg" width="400" alt="Japanese Chicken Curry">
+            <img src="images/JapaneseChickenCurry.jpg" width="400" alt="Japanese Chicken Curry">
             <p>Unlike Indian or Thai curry, Japanese curry is more savory than spicy. It’s an exemplary comfort food and one of the most-loved home-cooked dishes in Japan.</p>
             <h2>Recipe Ingredients:</h2>
             <ul>
@@ -53,12 +53,12 @@
                 <li>Scoop rice into bowls and serve curry on top.</li>
             </ol>
             <h2>Additional Food Images:</h2>
-            <img src="images/curry sauce.jpeg" width="200" alt="Curry Sauce">
-            <img src="images/raw chicken breast.jpeg" width="200" alt="Raw Chicken Breast">
+            <img src="images/curry-sauce.jpeg" width="200" alt="Curry Sauce">
+            <img src="images/raw-chicken-breast.jpeg" width="200" alt="Raw Chicken Breast">
             <img src="images/rice.jpeg" width="200" alt="Rice">
         </section>
         <section>
-            <h1>Homemade Mac & Cheese Recipe</h1>
+            <h2>Homemade Mac & Cheese Recipe</h2>
             <h2>Details:</h2>
             <ul>
                 <li><strong>Origin:</strong> Northern Europe</li>
@@ -90,7 +90,7 @@
             <img src="images/mac_cheese4.jpg" width="200" alt="Mac & Cheese Cooked in Nice Cookware">
         </section>
         <section>
-            <h1>Coca-Cola Chicken Wings Recipe</h1>
+            <h2>Coca-Cola Chicken Wings Recipe</h2>
             <h2>Details:</h2>
             <ul>
                 <li><strong>Origin:</strong> China</li>
