--- a/travel.html
+++ b/travel.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/html5reset.css">
     <meta charset="UTF-8">
     <title>Travel</title>
     <link rel="stylesheet" href="css/style.css">
